[package]
name = "rentry"
version = "0.1.0"
edition = "2021"
description = "API for interacting with Rentry, a publishing service for markdown content"
repository = "https://github.com/dark-fusion/rentry"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "3.0.0-beta.5", features = ["default"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["cookies", "json", "rustls-tls"]
